GeneUtils: PanelBuilder: write output to BED files